[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "http", "model", "standard_framework", "unstable_interactions"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
