[package]
name = "disco-gpt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "http", "model", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
